core/codegen/tests/ui-fail-stable/route-path-bad-syntax.stderr
error: invalid route URI: expected token '/' but found 'a' at index 0
         --- help: expected URI in origin form: "/path/<param>"
 --> tests/ui-fail-stable/route-path-bad-syntax.rs:5:7
  |
5 | #[get("a")]
  |       ^^^
  |
  = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid route URI: unexpected EOF: expected token '/' at index 0
         --- help: expected URI in origin form: "/path/<param>"
 --> tests/ui-fail-stable/route-path-bad-syntax.rs:8:7
  |
8 | #[get("")]
  |       ^^
  |
  = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid route URI: expected token '/' but found 'a' at index 0
         --- help: expected URI in origin form: "/path/<param>"
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:11:7
   |
11 | #[get("a/b/c")]
   |       ^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: route URIs cannot contain empty segments
         --- note: expected "/a/b", found "/a///b"
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:14:7
   |
14 | #[get("/a///b")]
   |       ^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: route URIs cannot contain empty segments
         --- note: expected "/?bat", found "/?bat&&"
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:17:7
   |
17 | #[get("/?bat&&")]
   |       ^^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: route URIs cannot contain empty segments
         --- note: expected "/?bat", found "/?bat&&"
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:20:7
   |
20 | #[get("/?bat&&")]
   |       ^^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: route URIs cannot contain empty segments
         --- note: expected "/a/b", found "/a/b//"
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:23:7
   |
23 | #[get("/a/b//")]
   |       ^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unused parameter
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:42:7
   |
42 | #[get("/<name>")]
   |       ^^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] expected argument named `name` here
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:43:6
   |
42 | #[get("/<name>")]
   | ----------------- in this procedural macro expansion
43 | fn h0(_name: usize) {}
   |      ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unused parameter
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:45:7
   |
45 | #[get("/a?<r>")]
   |       ^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] expected argument named `r` here
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:46:6
   |
45 | #[get("/a?<r>")]
   | ---------------- in this procedural macro expansion
46 | fn h1() {}
   |      ^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unused parameter
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:48:21
   |
48 | #[post("/a", data = "<test>")]
   |                     ^^^^^^^^
   |
   = note: this error originates in the attribute macro `post` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] expected argument named `test` here
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:49:6
   |
48 | #[post("/a", data = "<test>")]
   | ------------------------------ in this procedural macro expansion
49 | fn h2() {}
   |      ^^
   |
   = note: this error originates in the attribute macro `post` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unused parameter
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:51:7
   |
51 | #[get("/<_r>")]
   |       ^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] expected argument named `_r` here
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:52:6
   |
51 | #[get("/<_r>")]
   | --------------- in this procedural macro expansion
52 | fn h3() {}
   |      ^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unused parameter
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:54:7
   |
54 | #[get("/<_r>/<b>")]
   |       ^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] expected argument named `b` here
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:55:6
   |
54 | #[get("/<_r>/<b>")]
   | ------------------- in this procedural macro expansion
55 | fn h4() {}
   |      ^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid identifier: `foo_.`
         --- help: dynamic parameters must be valid identifiers
         --- help: did you mean `<foo_>`?
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:60:7
   |
60 | #[get("/<foo_.>")]
   |       ^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid identifier: `foo*`
         --- help: dynamic parameters must be valid identifiers
         --- help: did you mean `<foo>`?
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:63:7
   |
63 | #[get("/<foo*>")]
   |       ^^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid identifier: `!`
         --- help: dynamic parameters must be valid identifiers
         --- help: did you mean `<param>`?
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:66:7
   |
66 | #[get("/<!>")]
   |       ^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid identifier: `name>:<id`
         --- help: dynamic parameters must be valid identifiers
         --- help: did you mean `<nameid>`?
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:69:7
   |
69 | #[get("/<name>:<id>")]
   |       ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected static parameter
         --- help: parameter must be dynamic: `<foo>`
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:74:19
   |
74 | #[get("/", data = "foo")]
   |                   ^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: parameter cannot be trailing
         --- help: did you mean `<foo>`?
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:77:19
   |
77 | #[get("/", data = "<foo..>")]
   |                   ^^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected static parameter
         --- help: parameter must be dynamic: `<foo>`
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:80:19
   |
80 | #[get("/", data = "<foo")]
   |                   ^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid identifier: `test `
         --- help: dynamic parameters must be valid identifiers
         --- help: did you mean `<test>`?
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:83:19
   |
83 | #[get("/", data = "<test >")]
   |                   ^^^^^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: handler arguments must be named
         --- help: to name an ignored handler argument, use `_name`
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:89:7
   |
88 | #[get("/<_>")]
   | -------------- in this procedural macro expansion
89 | fn k0(_: usize) {}
   |       ^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: parameters cannot be empty
  --> tests/ui-fail-stable/route-path-bad-syntax.rs:93:7
   |
93 | #[get("/<>")]
   |       ^^^^^
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)
